--- a/front-end/src/components/Styles/Ticket.scss
+++ b/front-end/src/components/Styles/Ticket.scss
@@ -1,13 +1,17 @@
-.ticket-body {
-  border: 0.5px solid slategray;
-
-  .ticket-body-text {
-    font-size: 1rem;
-  }
+p {
+  font-size: 1rem;
 }
 
 .scrollable {
-  height: 100%;
+  height: 20rem;
   overflow-y: scroll;
+}
+
+.details-hover {
+  &:last-child:hover {
+    border: 1px solid #551A8B;
+    background-color: #7F00FF;
+    transition: all 0.3s ease;
+  }
 }
 
