--- a/front-end/src/components/Styles/Ticket.scss
+++ b/front-end/src/components/Styles/Ticket.scss
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
 p {
   font-size: 1rem;
 }
@@ -15,6 +19,7 @@ p {
     background-color: gold;
     transition: all 0.4s ease;
     color: #000000;
+    background-color: #f1eeee;
   }
 }
 
