--- a/front-end/src/components/Styles/Ticket.scss
+++ b/front-end/src/components/Styles/Ticket.scss
@@ -1,3 +1,12 @@
+// Color vriables
+$resolved-green: #04D651;
+$unresolved-orange: orange;
+$nothelped-purple: #FF12FF;
+$nothelped-pink: #F7EEFF;
+$helped-blue:  #0099FE;
+$details-darkgray: #333;
+
+// Styles
 body {
   font-family: 'Roboto', sans-serif;
 }
@@ -16,24 +25,25 @@ a {
   overflow-y: scroll;
 }
 
-.details-unresolved {
+.details-nothelped {
   transition: all 0.3s ease;
-  background-color: #FF12FF;
-  color: #F7EEFF;
+  background-color: $nothelped-purple;
+  color: $nothelped-pink;
 
   &:last-child:hover {
     color: white;
-    background-color: #0099FE;
+    background-color: $helped-blue;
     transition: all 0.3s ease;
+    cursor: pointer;
   }
 }
 
-.details-resolved {
-  background-color: #04D651;
+.details-helped {
+  background-color: $helped-blue;
   color: white;
 }
 
 .details-user {
-  background-color: #333;
+  background-color: $details-darkgray;
   color: white;
 }
