--- a/front-end/src/components/Styles/Ticket.scss
+++ b/front-end/src/components/Styles/Ticket.scss
@@ -22,6 +22,11 @@ a {
   color: inherit;
 }
 
+textarea {
+  max-width: 100%; 
+  max-height: 100%;
+}
+
 .scrollable {
   height: 20rem;
   overflow: scroll;
